--- a/rna-seq/project_config1.yaml
+++ b/rna-seq/project_config1.yaml
@@ -1,5 +1,5 @@
 metadata:
-  output_dir: ${HOME}/rnatestdata
+  output_dir: ${PROCESSED}/rnaseq_example1
   sample_annotation: annocomb_GSE107655.csv
   pipeline_interfaces: ${CODEBASE}/rnapipe/pipeline_interface.yaml
 
@@ -8,7 +8,19 @@ derived_columns: [data_source]
 data_sources:
   BAM: "${SRABAM}{SRR}.bam"
 
+implied_columns:
+  organism:
+    "Homo sapiens":
+      transcriptome: hg38_cdna
+    "Mus musculus":
+      transcriptome: mm10_cdna
+      library: rnaKallisto
+  read_type:
+    "single":
+     # add default values for kallisto
+       fragment_length: 200
+       fragment_length_sdev: 25
+
 pipeline_args:
   rnaKallisto.py:
     "-D": null
-
